# aircd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
clients/python/: pyproject.toml
clients/python/aircd/: __init__.py  bridge.py  client.py  daemon.py
clients/python/examples/: demo_agent.py  demo_concurrent_claim.py
clients/python/tests/: test_daemon.py  test_daemon_task_events.py  test_delivery.py  test_integration.py  test_protocol.py
scripts/: demo.sh  e2e-claude.sh  start-agent.sh  start-human-irssi.sh  start-server.sh  start-workspace.sh
src/: auth.rs  history.rs  main.rs  protocol.rs  server.rs  store.rs  tasks.rs  tokens.rs
