[package]
name = "aircd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
rand = "0.8"
rustls-pemfile = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
uuid = { version = "1", features = ["v4"] }
